--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:8080",
   "devDependencies": {
     "babel-plugin-import": "^1.4.0",
     "gh-pages": "^1.0.0",
